# i-ai-minute

./: .env.example  .env.local  .env.minimal  .env.modified.example  .gitignore  .pre-commit-config.yaml  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  LOCAL_SETUP.md  LOCAL_SETUP_GUIDE.md  LOCAL_WORKER_SETUP.md  Makefile  README.md  WARP.md  architecture-review.md  audiotest.py  backend.txt  backend2.txt  changes.md  check_db.py  check_db_guardrails.py  check_guardrails.py  conftest.py  docker-compose.local.yaml  docker-compose.yaml  errors.txt  errors2.txt  eslint.config.mts  minute_mhclg_target_architecture.drawio  myerrors.txt  mypy_output.txt  new.txt  overview.md  package-lock.json  package.json  pyproject.toml  run-worker-local.sh  test-apim.py  test_ollama_fix.py  verify_adapters.py  (+2 more)
backend/: main.py  (+1 more)
documentation/experiments/ffmpeg-varied-codecs/: .env.example  .gitignore  README.md  codec.py  codec_exploration.ipynb  config.py  data.py  ffmpeg_utils.py  jiwer_utils.py  pyproject.toml  transcribe.py
evals/audio_generation/: main.py  pyproject.toml
evals/audio_generation/audio_transformation/: audio_effects.py
evals/audio_generation/eleven_labs/: eleven_labs.py  readme.md
evals/audio_generation/tests/: test_utils.py
evals/audio_generation/transcripts/: __init__.py  jordan-alex.txt  transcript_util.py  two-teens-short.txt  two-teens.txt
evals/audio_generation/utils/: audio_suffix.py  build_pattern.py  extract_speakers.py  save_audio.py  select_voice.py  trim_suffix.py
evals/transcription/: .env.example  .gitignore  README.md  output.json  pyproject.toml
evals/transcription/src/: constants.py  evaluate.py  models.py
evals/transcription/src/adapters/: __init__.py  azure.py  base.py  whisper.py  whisply.py
evals/transcription/src/core/: ami_dataset.py  config.py  dataset.py  diarization_analysis.py  diarization_metrics.py  formatting.py  formatting_helpers.py  metrics.py  result_formatter.py  runner.py  types.py
evals/transcription/src/transcriptions_with_sped_audio/: README.md  evaluate.py  jiwer.py  plot.py
(+195 files in other folders)
