[project]
name = "audio-generation"
version = "0.1.0"
description = ""
authors = [{ name = "todo" }]
requires-python = "<4.0,>=3.12"
dependencies = ["elevenlabs (>=2.35.0,<3.0.0)", "pydub (>=0.25.1,<0.26.0)", "simpleaudio (>=1.0.4,<2.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false