[project]
name = "transcription-experiments"
version = "0.1.0"
package-mode = false
requires-python = ">=3.12,<3.15"
dependencies = [
    "ipykernel (>=7.2.0,<8.0.0)",
    "ffmpeg-python (>=0.2.0,<0.3.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "jiwer (>=4.0.0,<5.0.0)",
    "pandas (>=3.0.0,<4.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "plotly (>=6.5.2,<7.0.0)",
    "scikit-learn (>=1.8.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
